--- a/public/back/login.html
+++ b/public/back/login.html
@@ -16,6 +16,7 @@
       <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
     <![endif]-->
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/index.css">
   </head>
@@ -26,23 +27,23 @@
             <h1 class="panel-title text-center">后台管理系统</h1>
           </div>
           <div class="panel-body">
-            <form class="form-horizontal">
+            <form class="form-horizontal js-login">
               <div class="form-group">
                 <label for="inputEmail3" class="col-sm-3 control-label ">用户名:</label>
                 <div class="col-sm-9">
-                  <input type="email" class="form-control" id="inputEmail3" placeholder="请输入用户名">
+                  <input type="text" class="form-control" placeholder="请输入用户名" name="username">
                 </div>
               </div>
               <div class="form-group">
                 <label for="inputPassword3" class="col-sm-3 control-label">密　码:</label>
                 <div class="col-sm-9">
-                  <input type="password" class="form-control" id="inputPassword3" placeholder="请输入密码">
+                  <input type="password" class="form-control" placeholder="请输入密码" name="password">
                 </div>
               </div>
               
               <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-6">
-                  <button type="button" class="btn btn-default">重置</button>
+                  <button type="button" class="btn btn-default btnReset">重置</button>
                   <button type="submit" class="btn btn-default col-sm-offset-2">登录</button>
                 </div>
               </div>
@@ -59,5 +60,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
+    <script src="./js/login.js"></script>
   </body>
 </html>
