--- a/public/backmobile/common.html
+++ b/public/backmobile/common.html
@@ -24,25 +24,25 @@
         <div class="lt_footer">
             <ul>
                 <li>
-                    <a href="" class="current">
+                    <a href="index.html" class="current">
                         <i class="fa fa-home"></i>
                         <p>首页</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="category.html">
                         <i class="fa fa-bars"></i>
                         <p>分类页</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="cart.html">
                         <i class="fa fa-shopping-cart"></i>
                         <p>购物车</p>
                     </a>
                 </li>
                 <li>
-                    <a href="" >
+                    <a href="user.html">
                         <i class="fa fa-user"></i>
                         <p>用户中心</p>
                     </a>
@@ -51,5 +51,6 @@
         </div>
     </div>
 </body>
-
+<script src="./lib/mui/js/mui.min.js"></script>
+<script src="./js/common.js"></script>
 </html>
