--- a/public/backmobile/index.html
+++ b/public/backmobile/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>买买买</title>
     <link rel="stylesheet" href="./lib/font-awesome/css/font-awesome.css">
@@ -179,25 +180,25 @@
         <div class="lt_footer">
             <ul>
                 <li>
-                    <a href="" class="current">
+                    <a href="index.html" class="current">
                         <i class="fa fa-home"></i>
                         <p>首页</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="category.html">
                         <i class="fa fa-bars"></i>
                         <p>分类页</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="cart.html">
                         <i class="fa fa-shopping-cart"></i>
                         <p>购物车</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="user.html">
                         <i class="fa fa-user"></i>
                         <p>用户中心</p>
                     </a>
