--- a/public/backmobile/category.html
+++ b/public/backmobile/category.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>买买买商城</title>
     <link rel="stylesheet" href="./lib/font-awesome/css/font-awesome.css">
@@ -16,8 +16,8 @@
 <body>
     <div class="lt_container">
         <div class="lt_header">
-            <a href="" class="mui-pull-left page"><i class="fa fa-home"></i></a>
-            <a href="" class="mui-pull-right search"><i class="fa fa-search"></i></a>
+            <a href="index.html" class="mui-pull-left page"><i class="fa fa-home"></i></a>
+            <a href="search.html" class="mui-pull-right search"><i class="fa fa-search"></i></a>
             <h3>乐淘云购</h3>
         </div>
         <div class="lt_main">
