搜索历史记录完成

--- a/public/backmobile/search.html
+++ b/public/backmobile/search.html
@@ -22,7 +22,7 @@
         </div>
         <div class="lt_main">
             <div class="search">
-                <input type="text" placeholder="请输入关键字">
+                <input type="text" placeholder="请输入关键字" id="searchInput">
                 <button class="mui-btn mui-btn-primary search_btn">搜索</button>
             </div>
             <div class="lt_history">
@@ -79,14 +79,15 @@
 {{each list v i}}
 <li>
     <a href="" class="mui-pull-left">
-        <span>耐克</span>                                
+        <span>{{v}}</span>                                
     </a>  
-    <i class="btn_delete mui-pull-right mui-icon mui-icon-closeempty"></i>                           
+    <i class="btn_delete mui-pull-right mui-icon mui-icon-closeempty" data-txt="{{v}}"></i>                           
 </li>
 {{/each}}
 </script>
 <script src="./lib/mui/js/mui.min.js"></script>
 <script src="./lib/zepto/zepto.min.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
 <script src="./js/common.js"></script>
 <script src="./js/search.js"></script>
 </html>
