完成查询商品功能

--- a/public/backmobile/search.html
+++ b/public/backmobile/search.html
@@ -78,7 +78,7 @@
 <script type="html/text" id="tpl">
 {{each list v i}}
 <li>
-    <a href="" class="mui-pull-left">
+    <a href="searchList.html?key={{v}}" class="mui-pull-left">
         <span>{{v}}</span>                                
     </a>  
     <i class="btn_delete mui-pull-right mui-icon mui-icon-closeempty" data-txt="{{v}}"></i>                           
