--- a/public/backmobile/searchList.html
+++ b/public/backmobile/searchList.html
@@ -89,7 +89,7 @@
 <script type="html/text" id="tpl">
 {{each data v i}}
 <li>
-    <a href="">
+    <a href="product.html">
         <img src="{{v.pic[0].picAddr}}" alt="">
         <p class="info mui-ellipsis-2">{{v.proName}} </p>
         <p class="price">
