购物车完成

--- a/public/backmobile/product.html
+++ b/public/backmobile/product.html
@@ -17,8 +17,8 @@
 <body class="mui-android mui-android-6 mui-android-6-0">
     <div class="lt_container">
         <div class="lt_header">
-            <a href="" class="mui-pull-left page"><i class="fa fa-home"></i></a>
-            <a href="" class="mui-pull-right search"><i class="fa fa-search"></i></a>
+            <a href="index.html" class="mui-pull-left page"><i class="fa fa-home"></i></a>
+            <a href="javascript:location.reload();" class="mui-pull-right search"><i class="mui-icon mui-icon-reload"></i></a>
             <h3>乐淘云购</h3>
         </div>
         <div class="lt_main ">
@@ -31,7 +31,7 @@
         <div class="lt_buy">
             <a href="#" class="mui-push-left buyCar">前往购物</a>
             <div class="mui-pull-right">
-                <button class="mui-btn mui-btn-danger">加入购物车</button>
+                <button class="mui-btn mui-btn-danger btnAddCar">加入购物车</button>
                 <button class="mui-btn mui-btn-warning">买买买</button>
             </div>
 
@@ -94,7 +94,8 @@
                 <span class="surplusCount">剩余数量{{num}}</span>
             </div>
             <div class="lt_count item_box">
-                详情:<span>{{proDesc}}</span>                       
+                详情:<span>{{proDesc}}</span>    
+                <input type="hidden" id="productId" value="{{id}}">                   
             </div>
     </script>
     <script src="./lib/mui/js/mui.min.js"></script>
